--- a/paper/paper.html
+++ b/paper/paper.html
@@ -442,8 +442,7 @@ than previously thought?</p></li>
 Which have been reported seldom or not at all?</p></li>
 <li><p>which non-native species have become widespread in particular
 regions? Which tend to be symptomatic of degraded areas, and which seem
-to be able to coexist alongside more conservative native
-plants?</p></li>
+to be able to coexist alongside conservative native plants?</p></li>
 </ul>
 <p>There is currently great need in the ecological community to validate
 and potentially refine the floristic quality assessment methodology
@@ -515,8 +514,9 @@ tasks.</p>
 </div>
 <div id="acknowledgements" class="section level1">
 <h1>Acknowledgements</h1>
-<p>The authors wish to thanks Glenn Adelson, Ph.D (Lake Forest College)
-and Justin Thomas, M.Sc (<a href="https://www.naturecite.org/">NatureCITE</a>) for their insight
+<p>Partial funding for this project was provided by the James Rocco
+Program at Lake Forest College. The authors also wish to thanks Glenn
+Adelson, Ph.D (Lake Forest College) and Justin Thomas, M.Sc (<a href="https://www.naturecite.org/">NatureCITE</a>) for their insight
 into floristic quality assessment.</p>
 </div>
 <div id="references" class="section level1 unnumbered">
