--- a/paper/paper.html
+++ b/paper/paper.html
@@ -383,12 +383,12 @@ floristic quality assessment data</h1>
 <p>Floristic Quality Assessment (FQA) is a standardized method for
 rating the ecological value of natural areas based on the plant species
 found within them <span class="citation">(Spyreas 2019; Swink, Wilhelm,
-et al. 1994)</span>. Each species considered native to a particular
+et al. 1994)</span>. Each species known to be found in a particular
 region is assigned a <em>coefficient of conservatism</em>, C, on a scale
-of 0-10 by experts in local flora (non-native species are assigned a
-zero C-value by default). Larger values of C correspond to species that
-tend to be found in undegraded sites, while lower values indicate
-species that are more tolerant to human impacts <span class="citation">(Bauer 2018)</span>. An inventory of the site is
+of 0-10 by experts in local flora (non-native species are generally
+assigned a zero C-value by default). Larger values of C correspond to
+species that tend to be found in undegraded sites, while lower values
+indicate species that are more tolerant to human impacts <span class="citation">(Bauer 2018)</span>. An inventory of the site is
 conducted and the average of the C-values found there is computed. This
 <em>native mean C-value</em>, sometimes weighted by the total number of
 plant species identified to give the so-called <em>floristic quality
@@ -403,8 +403,8 @@ which already includes tens of thousands of assessments from over one
 hundred floristic quality databases. This large public data cache
 represents a potentially invaluable resource for quantitative
 ecologists, though it has so far gone largely unexplored due to a lack
-of both technical tools for interacting programatically with the
-repository and statistical methods for analyzing the floristic quality
+of both technical tools for interacting programmatically with the
+repository and accessible workflows for analyzing the floristic quality
 data housed there.</p>
 <p><code>fqar</code> is an R <span class="citation">(R Core Team
 2022)</span> package which facilitates the analysis of occurrence and
@@ -425,20 +425,24 @@ conservation organizations in their reporting, including native mean-C.
 However, its focus on individual assessments is not well-suited to
 analyses that might wish to consider multiple assessments
 simultaneously.</p>
-<p>The <code>fqar</code> package enables analysis with a wider lens,
-allowing users to consider database-wide records of plant taxa or
-characteristics. By examining entire collections of assessments
-simultaneously, ecologists may gain insights into floristic quality
-assessment as well as the various plant species it tracks. Among the
-wide range of questions made answerable by <code>fqar</code> are the
-following:</p>
+<p>This package compliments existing R packages for floristic quality
+analysis, including <code>fqacalc</code> and <code>fqadata</code>, which
+support the work of field practitioners wishing to make use of R <span class="citation">(Foxfoot 2023a, 2023b)</span>. The <code>fqar</code>
+package enables analysis with a wider lens, allowing users to consider
+database-wide records of plant taxa or characteristics. By examining
+entire collections of assessments simultaneously, ecologists may gain
+insights into floristic quality assessment as well as the various plant
+species it tracks. Among the wide range of questions made answerable by
+<code>fqar</code> are the following:</p>
 <ul>
 <li><p>what is the co-occurrence profile of a given species of interest?
 What other plants (or types of plants) is it most frequently identified
 alongside?</p></li>
-<li><p>which species in a given database might be misclassified? Based
-on their co-occurrence profiles, might some be more or less conservative
-than previously thought?</p></li>
+<li><p>which species in a given database might be misclassified based on
+their co-occurrence profiles? It is to be expected that, on average, 9’s
+and 10’s will tend to be found among higher conservancy flora than 0’s
+and 1’s. Species that radically depart from this expectation would be
+candidates for re-evaluation.</p></li>
 <li><p>what species are most commonly identified in certain regions?
 Which have been reported seldom or not at all?</p></li>
 <li><p>which non-native species have become widespread in particular
@@ -546,6 +550,14 @@ Bowles, Marlin, and Michael Jones. 2006. <span>“Testing the Efficacy of
 Species Richness and Floristic Quality Assessment of Quality, Temporal
 Change, and Fire Effects in Tallgrass Prairie Natural Areas.”</span>
 <em>Natural Areas Journal</em> 26 (1): 17–30. <a href="https://doi.org/10.3375/0885-8608(2006)26[17:TTEOSR]2.0.CO;2">https://doi.org/10.3375/0885-8608(2006)26[17:TTEOSR]2.0.CO;2</a>.
+</div>
+<div id="ref-fqacalc" class="csl-entry">
+Foxfoot, Iris. 2023a. <em>Fqacalc: Calculate Floristic Quality
+Assessment Metrics</em>. <a href="https://CRAN.R-project.org/package=fqacalc">https://CRAN.R-project.org/package=fqacalc</a>.
+</div>
+<div id="ref-fqadata" class="csl-entry">
+———. 2023b. <em>Fqadata: Contains Regional Floristic Quality Assessment
+Databases</em>. <a href="https://CRAN.R-project.org/package=fqadata">https://CRAN.R-project.org/package=fqadata</a>.
 </div>
 <div id="ref-freyman2016universal" class="csl-entry">
 Freyman, William A, Linda A Masters, and Stephen Packard. 2016.
